# ws2tcp-router

./: .dockerignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  config.example.toml
.github/workflows/: docker-publish.yml  release.yml
src/: args.rs  auth.rs  listener.rs  logging.rs  main.rs  proxy.rs  target.rs  tls.rs
