[package]
name = "ws2tcp-router"
version = "0.1.1"
edition = "2024"
description = "A WebSocket-to-TCP proxy that routes upstream TCP targets by request path."
license = "MIT OR Apache-2.0"
repository = "https://www.wangguofang.net/git/ws2tcp-router.git"
readme = "README.md"
keywords = ["websocket", "tcp", "proxy", "router"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
tokio = { version = "1.45", features = ["full"] }
tokio-tungstenite = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
