[package]
name = "ws2tcp-router"
version = "0.1.7"
edition = "2024"
description = "A WebSocket-to-TCP proxy that routes upstream TCP targets by request path."
license = "MIT OR Apache-2.0"
repository = "https://www.wangguofang.net/git/ws2tcp-router.git"
readme = "README.md"
keywords = ["websocket", "tcp", "proxy", "router"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
socket2 = "0.6"
tokio = { version = "1.45", features = ["full"] }
tokio-tungstenite = "0.26"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
