[package]
name = "ws2tcp-router"
version = "0.1.12"
edition = "2024"
description = "A WebSocket-to-TCP proxy that routes upstream TCP targets by request path."
license = "MIT OR Apache-2.0"
repository = "https://www.wangguofang.net/git/ws2tcp-router.git"
readme = "README.md"
keywords = ["websocket", "tcp", "proxy", "router"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
local-ip-address = "0.6"
rcgen = "0.13"
rustls-pemfile = "2.2"
serde = { version = "1.0", features = ["derive"] }
socket2 = "0.6"
time = "0.3"
tokio = { version = "1.45", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "ring", "tls12"] }
tokio-tungstenite = "0.26"
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
